--- a/manifest.json
+++ b/manifest.json
@@ -12,23 +12,23 @@
         {
             "src": "icons/Icon-192.png",
             "sizes": "192x192",
-            "type": "assets/image/png"
+            "type": "image/png"
         },
         {
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
-            "type": "assets/image/png"
+            "type": "image/png"
         },
         {
             "src": "icons/Icon-maskable-192.png",
             "sizes": "192x192",
-            "type": "assets/image/png",
+            "type": "image/png",
             "purpose": "maskable"
         },
         {
             "src": "icons/Icon-maskable-512.png",
             "sizes": "512x512",
-            "type": "assets/image/png",
+            "type": "image/png",
             "purpose": "maskable"
         }
     ]
